fixes grid layout issue passage view (#264)

--- a/src/groups/RouteNetworkDiagram/PassageView/PassageView.scss
+++ b/src/groups/RouteNetworkDiagram/PassageView/PassageView.scss
@@ -5,8 +5,6 @@
 }
 
 .passage-view-container {
-  display: flex;
-  flex-wrap: wrap;
   border: 1px solid $border-color;
   border-radius: 4px;
   background-color: $header-color;
@@ -20,12 +18,15 @@
   font-size: 18px;
 }
 
+.passage-view-row-title-header {
+  display: flex;
+}
+
 .passage-view-row-header {
   font-weight: bold;
   background-color: $header-color;
   border-bottom: none;
   font-size: 16px;
-  width: 100%;
   border-bottom: none;
   border-top: 1px solid $border-color;
   border-bottom: 1px solid $border-color;
@@ -35,7 +36,6 @@
   border-radius: 4px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
-  width: 100%;
   background-color: white;
 
   .passage-view-row {
@@ -55,15 +55,14 @@
   }
 }
 
-.passage-view-row {
-  flex-basis: 100%;
+.passage-view-grid-size {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  width: 100%;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+}
+
+.passage-view-row {
   border-bottom: 1px solid $border-color;
-  display: flex;
-  align-items: center;
-  height: 100%;
 
   &:last-child {
     border-bottom: none;
@@ -71,16 +70,15 @@
 
   .passage-view-row-item {
     border-right: 1px solid $border-color;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    min-height: 100%;
 
     &:last-child {
       border-right: none;
     }
 
     p {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       padding: 10px;
     }
   }
